--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -49,6 +49,12 @@ bfd/test_bfd.py::test_bfd_scale:
 #######################################
 #####            bgp              #####
 #######################################
+bgp/test_bgp_queue.py:
+  skip:
+    reason: "Unsupported topology"
+    conditions:
+      - "topo_type in ['m0', 'mx']"
+
 bgp/test_bgp_speaker.py:
   skip:
     reason: "M0/backend topo does not support test_bgp_speaker"
