--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -1068,11 +1068,10 @@ show_techsupport/test_techsupport.py::test_techsupport:
 #######################################
 snmp/test_snmp_link_local.py:
   skip:
-    reason: "SNMP over IPv6 support not present in release branches."
+    reason: "SNMP over link local IPv6 not supported in all scenarios."
     conditions:
-      - https://github.com/sonic-net/sonic-buildimage/issues/6108
+      - https://github.com/sonic-net/sonic-mgmt/pull/10244/files
       - "is_multi_asic==False"
-      - "release in ['202205', '202211', '202305']"
 
 snmp/test_snmp_pfc_counters.py:
   skip:
