--- a/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
+++ b/tests/common/plugins/conditional_mark/tests_mark_conditions.yaml
@@ -1032,6 +1032,17 @@ route/test_static_route.py::test_static_route_ecmp_ipv6:
     reason: "Test case may fail due to a known issue"
     conditions: https://github.com/sonic-net/sonic-buildimage/issues/4930
 
+
+#######################################
+#####           sflow             #####
+#######################################
+sflow/test_sflow.py:
+  skip:
+    reason: "sflow test not supported on Nvidia platform when topology is t0-64"
+    conditions:
+      - "asic_type in ['mellanox'] and topo_name in ['t0-64']"
+
+
 #######################################
 #####      show_techsupport       #####
 #######################################
